# ALMODOVAR_TP2_OPEN_DATA

./: README.md  main.py  pyproject.toml  test_api.py  verify_data.py
